--- a/DesignPatterns/pom.xml
+++ b/DesignPatterns/pom.xml
@@ -14,4 +14,75 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
+
+    <dependencies>
+    		<dependency>
+    			<groupId>org.springframework.boot</groupId>
+    			<artifactId>spring-boot-starter-web</artifactId>
+    		</dependency>
+
+    		<dependency>
+    			<groupId>org.springframework.boot</groupId>
+    			<artifactId>spring-boot-starter-test</artifactId>
+    			<scope>test</scope>
+    		</dependency>
+
+    		<dependency>
+    			<groupId>org.openjdk.jmh</groupId>
+    			<artifactId>jmh-core</artifactId>
+    			<version>1.21</version>
+    		</dependency>
+    		<dependency>
+    			<groupId>org.openjdk.jmh</groupId>
+    			<artifactId>jmh-generator-annprocess</artifactId>
+    			<version>1.21</version>
+    			<scope>provided</scope>
+    		</dependency>
+
+    		<!-- csv handling -->
+    		<dependency>
+    			<groupId>com.opencsv</groupId>
+    			<artifactId>opencsv</artifactId>
+    			<version>4.1</version>
+    		</dependency>
+
+    		<dependency>
+    			<groupId>pl.pragmatists</groupId>
+    			<artifactId>JUnitParams</artifactId>
+    			<version>1.1.1</version>
+    			<scope>test</scope>
+    		</dependency>
+
+    		<dependency>
+    			<groupId>org.assertj</groupId>
+    			<artifactId>assertj-core</artifactId>
+    			<!-- use 2.9.1 for Java 7 projects -->
+    			<version>3.11.1</version>
+    			<scope>test</scope>
+    		</dependency>
+
+    		<dependency>
+    			<groupId>junit</groupId>
+    			<artifactId>junit</artifactId>
+    			<version>4.12</version>
+    			<scope>test</scope>
+    		</dependency>
+
+            <dependency>
+                <groupId>io.codearte.jfairy</groupId>
+                <artifactId>jfairy</artifactId>
+                <version>0.5.0</version>
+                <scope>test</scope>
+            </dependency>
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.10.19</version>
+			<scope>test</scope>
+		</dependency>
+
+    	</dependencies>
+
+
 </project>
